syntax = "proto3";

package ziti.loop3.pb;
option go_package = "github.com/openziti/ziti/ziti-fabric-test/subcmd/loop3/pb/loop3_pb";

message Test {
  string name = 1;
  int32 txRequests = 2;
  int32 txPacing = 3;
  int32 txMaxJitter = 4;
  int32 rxRequests = 5;
  int32 rxTimeout = 6;
  int32 payloadMinBytes = 7;
  int32 payloadMaxBytes = 8;
  int32 latencyFrequency = 9;
  string txBlockType = 10;
  string rxBlockType = 11;
  int32 rxSeqBlockSize = 12;
  string rxPacing = 13;
  string rxMaxJitter = 14;
}